# dictionary

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  main.cpp
docs/: class_diagram.drawio  description.txt
example/: a.cpp  main.cpp
extra/: supported-langs.txt
include/qt/: database.h  databasebuilder.h  queryanswer.h
include/simple/: CMakeLists.txt  consoleapplication.h  database.h  databasebuilder.h  dictionary.h  entry.h  library.h  query.h  queryanswer.h
qt-app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  database.h  databasebuilder.h  entry.h  main.cpp  query.h  queryanswer.h  simple_database.cpp  simple_database.h  simple_databasebuilder.cpp  simple_databasebuilder.h  simple_dictionary.cpp  simple_dictionary.h  simple_entry.cpp  simple_query.h  simple_queryanswer.h
src/qt/: database.cpp  databasebuilder.cpp  mainwindow.cpp
src/simple/: consoleapplication.cpp  database.cpp  databasebuilder.cpp  entry.cpp  query.cpp  queryanswer.cpp
tests/: main_test.cpp  tests.cpp
